[metadata]
name = az-iranian-bank-gateways
version = attr: azbankgateways.__version__
url = https://github.com/ali-zahedi/az-iranian-bank-gateways
author = Ali Zahedigol
author_email = alizahedigol@gmail.com
description = Iranian Bank Gateways for django
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    six
    Django >= 3.0
    pycryptodome >= 3.9.7
    zeep


[options.extras_require]
dev =
    flake8
    black
    isort
    pre-commit

[bdist_rpm]
doc_files = docs LICENSE README.md

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore = E203
max-line-length = 119

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = azbankgateways
